# openml-rust

./: .gitignore  .travis.yml  Cargo.toml  README.md
examples/: classification_task.rs  regression_task.rs
src/: dataset.rs  error.rs  lib.rs  measure_accumulator.rs  openml_api.rs  prelude.rs  task.rs
src/baseline/: mod.rs  naive_bayes_classifier.rs  naive_linear_regression.rs
src/openml_api/: api_types.rs  file_lock.rs  impls_from_json.rs  impls_from_openml.rs  mod.rs  web_access.rs
src/procedures/: frozen_sets.rs  mod.rs
src/tasks/: mod.rs  supervised_classification.rs  supervised_regression.rs
