[package]
name = "openml"
version = "0.1.0"
authors = ["Martin Billinger <flkazemakase@gmail.com>"]

[dev-dependencies]
simple_logger = "0.5"

[dependencies]
arff = { path = "../arff" }
fs2 = "*"
futures = "0.1"
hyper = "0.11"
hyper-tls = "0.1"
log = "0.4"
ndarray = "0.11"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
time = "*"
tokio-core = "0.1"
